# Anime4K-Upscalar-macOS

./: .gitignore  README.md  anime4k_metal_phase4.md  project.yml
.github/workflows/: build.yml
Anime4K-Upscaler.xcodeproj/: project.pbxproj
Anime4K-Upscaler/Models/: CompressModels.swift  Models.swift  StreamOptimizeModels.swift
Anime4K-Upscaler/Resources/VendoredTools/: ffmpeg
Anime4K-Upscaler/Scripts/: bundle_dependencies.sh
Anime4K-Upscaler/Tools/: phase4_aahq_benchmark.swift  run_phase4_aahq_benchmark.zsh
Anime4K-Upscaler/Utilities/: DurationProbe.swift  FFmpegLocator.swift
Anime4K-Upscaler/ViewModels/: Anime4KMPSConvolution.swift  Anime4KOfflineProcessor.swift  Anime4KRuntimePipeline.swift  AppViewModel.swift  CompressViewModel.swift  ProcessingEngine.swift  StreamOptimizeViewModel.swift
Anime4K-Upscaler/Views/: ContentView.swift
Notes-for-AI/: README.md
Notes-for-AI/repo-memory/: DEVELOPER_INDEX.md  implementation_fixes_concrete.md  implementation_notes.md  mps_parity_root_causes.md
Notes-for-AI/session-memory/: anime4k_phase4_research.md  metal_mps_optimization_research.md  milestone_strategy.md  plan.md  verification_commands.md  zero_copy_pipeline_research.md
macos/: project.yml
macos/Anime4K-Upscaler/: Anime4K_UpscalerApp.swift
macos/Anime4K-Upscaler.xcodeproj/: project.pbxproj
windows/: Anime4KUpscaler.sln  CMakeLists.txt  download_dependencies.py  implementation_plan.md
windows/a4k_app/: App.cpp  App.h  App.idl  App.xaml  MainWindow.cpp  MainWindow.h  MainWindow.idl  MainWindow.xaml  Styles.xaml  a4k_app.vcxproj  pch.h
windows/a4k_app/bridge/: AppVMBridge.cpp  AppVMBridge.h  CompressVMBridge.cpp  CompressVMBridge.h  QtHost.cpp  QtHost.h  StreamOptimizeVMBridge.cpp  StreamOptimizeVMBridge.h
windows/a4k_app/services/: WinUiPickerService.cpp  WinUiPickerService.h
windows/a4k_app/views/: CompressTab.cpp  CompressTab.h  CompressTab.idl  CompressTab.xaml  ConfigurationPanel.cpp  ConfigurationPanel.h  ConfigurationPanel.idl  ConfigurationPanel.xaml  EmptyState.cpp  EmptyState.h  EmptyState.idl  EmptyState.xaml  FileListPanel.cpp  FileListPanel.h  FileListPanel.idl  FileListPanel.xaml  ModePicker.cpp  ModePicker.h  ModePicker.idl  ModePicker.xaml  ProcessingPanel.cpp  ProcessingPanel.h  ProcessingPanel.idl  ProcessingPanel.xaml  QualityTuneTab.cpp  QualityTuneTab.h  QualityTuneTab.idl  QualityTuneTab.xaml  StreamOptimizeTab.cpp  StreamOptimizeTab.h  StreamOptimizeTab.idl  StreamOptimizeTab.xaml  UpscaleTab.cpp  UpscaleTab.h  UpscaleTab.idl  UpscaleTab.xaml
windows/build-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Anime4KUpscaler.sln  Anime4KUpscaler.vcxproj  Anime4KUpscaler.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
windows/build-x64/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
windows/build-x64/Anime4KUpscaler_autogen/: mocs_compilation_Release.cpp
windows/build-x64/Anime4KUpscaler_autogen/include_Release/3YJK5W5UP7/: qrc_resources_CMAKE_.cpp
windows/build-x64/Anime4KUpscaler_autogen/include_Release/M4YTXQ7V2H/: moc_CompressModels.cpp  moc_CompressModels.cpp.d  moc_Models.cpp  moc_Models.cpp.d  moc_StreamOptimizeModels.cpp  moc_StreamOptimizeModels.cpp.d
windows/build-x64/Anime4KUpscaler_autogen/include_Release/QGUZWGM6RH/: moc_AppViewModel.cpp  moc_AppViewModel.cpp.d  moc_CompressViewModel.cpp  moc_CompressViewModel.cpp.d  moc_ProcessingEngine.cpp  moc_ProcessingEngine.cpp.d  moc_StreamOptimizeViewModel.cpp  moc_StreamOptimizeViewModel.cpp.d
windows/build-x64/Anime4KUpscaler_autogen/include_Release/VSCBVMNR7M/: moc_DurationProbe.cpp  moc_DurationProbe.cpp.d
windows/build-x64/Anime4KUpscaler_autogen/include_Release/YPKJ5OE7LN/: moc_CompressTab.cpp  moc_CompressTab.cpp.d  moc_ConfigurationPanel.cpp  moc_ConfigurationPanel.cpp.d  moc_EmptyStateWidget.cpp  moc_EmptyStateWidget.cpp.d  moc_FileListPanel.cpp  moc_FileListPanel.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ModePickerWidget.cpp  moc_ModePickerWidget.cpp.d  moc_ProcessingPanel.cpp  moc_ProcessingPanel.cpp.d  moc_ProgressRowWidget.cpp  moc_ProgressRowWidget.cpp.d  moc_QualityTuneTab.cpp  moc_QualityTuneTab.cpp.d  moc_StreamOptimizeTab.cpp  moc_StreamOptimizeTab.cpp.d  moc_UpscaleTab.cpp  moc_UpscaleTab.cpp.d
windows/resources/: resources.qrc
windows/src/: main.cpp
windows/src/models/: CompressModels.cpp  CompressModels.h  Models.cpp  Models.h  StreamOptimizeModels.cpp  StreamOptimizeModels.h
windows/src/ui/: CompressTab.cpp  CompressTab.h  ConfigurationPanel.cpp  ConfigurationPanel.h  EmptyStateWidget.cpp  EmptyStateWidget.h  FileListPanel.cpp  FileListPanel.h  MainWindow.cpp  MainWindow.h  ModePickerWidget.cpp  ModePickerWidget.h  ProcessingPanel.cpp  ProcessingPanel.h  ProgressRowWidget.cpp  ProgressRowWidget.h  QualityTuneTab.cpp  QualityTuneTab.h  StreamOptimizeTab.cpp  StreamOptimizeTab.h  StyleSheet.h  UpscaleTab.cpp  UpscaleTab.h
windows/src/utils/: DurationProbe.cpp  DurationProbe.h  FFmpegLocator.cpp  FFmpegLocator.h  HardwareDetector.cpp  HardwareDetector.h  SleepPreventer.cpp  SleepPreventer.h
windows/src/viewmodels/: AppViewModel.cpp  AppViewModel.h  CompressViewModel.cpp  CompressViewModel.h  IPickerService.h  ProcessingEngine.cpp  ProcessingEngine.h  StreamOptimizeViewModel.cpp  StreamOptimizeViewModel.h
(+32 files in other folders)
